--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ margin-left: 5px;
 </head>
 <body>
      <nav>
-        <a href="tea.html">HOME</a>
+        <a href="index.html">HOME</a>
     </nav>
     <p> A restaurant serving drip coffee with light meals or a specialty store selling roast and ground beans, coffee sets, and other items<br>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><br> Neque ipsum debitis voluptates<br><br> aspernatur dolor earum <br><br>ipsa obcaecati alias dolore corporis assumenda magni <br><br>velit similique illum tenetur suscipit tempore magnam possimus excepturi cupiditate perferendis,<br><br> omnis deserunt consequatur. <br><br>Saepe facilis reiciendis,<br><br>dignissimos magnam autem itaque dicta voluptatem consequatur nam voluptates vitae dolorem!<br>This is the official coffee definition: a beverage made by percolation, infusion, or decoction from the roasted and ground seeds of a coffee plant. You're probably used to seeing these roasted coffee beans in your favourite café or the supermarket.</p>
    
