--- a/complete.html
+++ b/complete.html
@@ -37,7 +37,7 @@ a:hover{
     <div>
   <i class="fa-solid fa-check"></i> <br><span style="color: green; font-size: 25px;"> Order confirmed</span>
   </div>  <br><br><br>
-  <a href="tea.html">click to home page</a>
+  <a href="index.html">click to home page</a>
 </div>
 </body>
 </html>
