--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <div  class="menu">
         <div class="seconddiv"
         <nav>
-            <a href="tea.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="coffeimages.html">IMAGES</a>
             <a href="coffeorder.html"> ORDER</a>
