--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="cup.jpg" width="=200px" height="50px">
     <b>COFFEE</b><br><br>
 <div class="parent">
-    <div><nav> <a href="tea.html" class="color">HOME</a></nav></div>
+    <div><nav> <a href="index.html" class="color">HOME</a></nav></div>
     <div>
     <nav><a href="about.html" class="color " > ABOUT</a></nav>
     </div>
