--- a/coffeimages.html
+++ b/coffeimages.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>images</title>
+    <title>www.krishna coffe shop</title>
+    <link rel="icon" type="image/x-icon" href="gana photo.jpeg">
     <style>
         nav{
             text-align: right;
