--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>menu</title> 
+    <title>www.krishna coffe shop</title> 
+    <link rel="icon" type="image/x-icon" href="gana photo.jpeg">
     <link rel="stylesheet" href="menu.css"> 
 </head>
 <body>
