--- a/coffee contact.html
+++ b/coffee contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>www.krishna coffe shop</title>
+    <link rel="icon" type="image/x-icon" href="gana photo.jpeg">
 </head>
 <style>
     body{
